@@ -5,7 +5,6 @@ import com.amigoscode.exception.RequestValidationException;
 import com.amigoscode.exception.ResourceNotFoundException;
 import com.amigoscode.s3.S3Buckets;
 import com.amigoscode.s3.S3Service;
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -26,30 +25,30 @@ public class CustomerService {
     private final S3Buckets s3Buckets;
 
     public CustomerService(@Qualifier("jdbc") CustomerDao customerDao,
-                           CustomerDTOMapper customerDTOMapper,
-                           PasswordEncoder passwordEncoder,
-                           S3Service s3Service,
-                           S3Buckets s3Buckets) {
+        CustomerDTOMapper customerDTOMapper,
+        PasswordEncoder passwordEncoder,
+        S3Service s3Service,
+        S3Buckets buckets) {
         this.customerDao = customerDao;
         this.customerDTOMapper = customerDTOMapper;
         this.passwordEncoder = passwordEncoder;
         this.s3Service = s3Service;
-        this.s3Buckets = s3Buckets;
+        this.s3Buckets = buckets;
     }
 
     public List<CustomerDTO> getAllCustomers() {
         return customerDao.selectAllCustomers()
-                .stream()
-                .map(customerDTOMapper)
-                .collect(Collectors.toList());
+            .stream()
+            .map(customerDTOMapper)
+            .collect(Collectors.toList());
     }
 
     public CustomerDTO getCustomer(Integer id) {
         return customerDao.selectCustomerById(id)
-                .map(customerDTOMapper)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "customer with id [%s] not found".formatted(id)
-                ));
+            .map(customerDTOMapper)
+            .orElseThrow(() -> new ResourceNotFoundException(
+                "customer with id [%s] not found".formatted(id)
+            ));
     }
 
     public void addCustomer(CustomerRegistrationRequest customerRegistrationRequest) {
@@ -57,41 +56,42 @@ public class CustomerService {
         String email = customerRegistrationRequest.email();
         if (customerDao.existsCustomerWithEmail(email)) {
             throw new DuplicateResourceException(
-                    "email already taken"
+                "email already taken"
             );
         }
 
         // add
         Customer customer = new Customer(
-                customerRegistrationRequest.name(),
-                customerRegistrationRequest.email(),
-                passwordEncoder.encode(customerRegistrationRequest.password()),
-                customerRegistrationRequest.age(),
-                customerRegistrationRequest.gender());
+            customerRegistrationRequest.name(),
+            customerRegistrationRequest.email(),
+            passwordEncoder.encode(customerRegistrationRequest.password()),
+            customerRegistrationRequest.age(),
+            customerRegistrationRequest.gender());
 
         customerDao.insertCustomer(customer);
     }
 
     public void deleteCustomerById(Integer customerId) {
         checkIfCustomerExistsOrThrow(customerId);
+
         customerDao.deleteCustomerById(customerId);
     }
 
     private void checkIfCustomerExistsOrThrow(Integer customerId) {
         if (!customerDao.existsCustomerById(customerId)) {
             throw new ResourceNotFoundException(
-                    "customer with id [%s] not found".formatted(customerId)
+                "customer with id [%s] not found".formatted(customerId)
             );
         }
     }
 
     public void updateCustomer(Integer customerId,
-                               CustomerUpdateRequest updateRequest) {
+        CustomerUpdateRequest updateRequest) {
         // TODO: for JPA use .getReferenceById(customerId) as it does does not bring object into memory and instead a reference
         Customer customer = customerDao.selectCustomerById(customerId)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "customer with id [%s] not found".formatted(customerId)
-                ));
+            .orElseThrow(() -> new ResourceNotFoundException(
+                "customer with id [%s] not found".formatted(customerId)
+            ));
 
         boolean changes = false;
 
@@ -108,7 +108,7 @@ public class CustomerService {
         if (updateRequest.email() != null && !updateRequest.email().equals(customer.getEmail())) {
             if (customerDao.existsCustomerWithEmail(updateRequest.email())) {
                 throw new DuplicateResourceException(
-                        "email already taken"
+                    "email already taken"
                 );
             }
             customer.setEmail(updateRequest.email());
@@ -116,43 +116,44 @@ public class CustomerService {
         }
 
         if (!changes) {
-           throw new RequestValidationException("no data changes found");
+            throw new RequestValidationException("no data changes found");
         }
 
         customerDao.updateCustomer(customer);
     }
 
-    public void uploadCustomerProfileImage(Integer customerId,
-                                           MultipartFile file) {
+    public void uploadCustomerProfileImage(Integer customerId, MultipartFile file) {
+
         checkIfCustomerExistsOrThrow(customerId);
+
         String profileImageId = UUID.randomUUID().toString();
         try {
             s3Service.putObject(
-                    s3Buckets.getCustomer(),
-                    "profile-images/%s/%s".formatted(customerId, profileImageId),
-                    file.getBytes()
-            );
+                s3Buckets.getCustomer(),
+                "profile-images/%s/%s".formatted(customerId, profileImageId),
+                file.getBytes());
         } catch (IOException e) {
-            throw new RuntimeException("failed to upload profile image", e);
+            throw new RuntimeException(e);
         }
-        customerDao.updateCustomerProfileImageId(profileImageId, customerId);
+        customerDao.updateCustomerImageProfileId(profileImageId, customerId);
     }
 
     public byte[] getCustomerProfileImage(Integer customerId) {
         var customer = customerDao.selectCustomerById(customerId)
-                .map(customerDTOMapper)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "customer with id [%s] not found".formatted(customerId)
-                ));
+            .map(customerDTOMapper)
+            .orElseThrow(() -> new ResourceNotFoundException(
+                "customer with id [%s] not found".formatted(customerId)
+            ));
 
-        if (StringUtils.isBlank(customer.profileImageId())) {
-            throw new ResourceNotFoundException(
-                    "customer with id [%s] profile image not found".formatted(customerId));
+        //TODO: Check if profileImageId is empty or null
+        if(customer.profileImageId().isBlank()){
+            throw new ResourceNotFoundException("customer with id [%s] image not found".
+                formatted(customerId));
         }
 
         byte[] profileImage = s3Service.getObject(
-                s3Buckets.getCustomer(),
-                "profile-images/%s/%s".formatted(customerId, customer.profileImageId())
+            s3Buckets.getCustomer(),
+            "profile-images/%s/%s".formatted(customerId, customer.profileImageId())
         );
         return profileImage;
     }
